# Flaarc

./: .gitignore  Cargo.toml  Makefile  README.md  build.py  install.py  readme.flaarc  table_test.csv  test.flaarc  test.html
outputs/: html.c  ir.c  latex.c  markdown.c  plaintext.c
src/: error.rs  format.rs  help info.txt  logic.rs  main.rs  settings.rs  sexy frog.txt  standard_variables.rs
src/logic/: error.rs
standard_functions/: forall.c  if equal.c  if.c  length.c  lower.c  math.c  p.c  sum.c  table.rs  upper.c
