#cargo-features = ["profile-rustflags"]
[package]
name = "flaarc"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
termion = "*"

[profile.release]
lto = true
#rustflags = ["-C", "target-cpu=native"]
codegen-units = 1
